--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <div class="eye2"></div>
     <div class="nose"></div>
+    <div class="belt"></div>
+    <div class="bell"></div>
 </body>
 
 </html>
